--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-beta01'
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
 
     testImplementation 'junit:junit:4.13.2'
 
